Fix a typo in docs

--- a/filebeat/docs/modules/envoyproxy.asciidoc
+++ b/filebeat/docs/modules/envoyproxy.asciidoc
@@ -8,7 +8,7 @@ This file is generated! See scripts/docs_collector.py
 :modulename: envoyproxy
 :has-dashboards: true
 
-== Coredns Module
+== Envoyproxy Module
 
 This is a filebeat module for envoy proxy. It supports both standalone deployment and 
 envoy proxy deployment in Kubernetes. 
