Close changelog for 7.0.0

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -4,7 +4,7 @@
 :pull: https://github.com/elastic/beats/pull/
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v7.0.0-...7.0[Check the HEAD diff]
 
 ==== Breaking changes
 
@@ -30,18 +30,9 @@ https://github.com/elastic/beats/compare/v7.0.0-rc1...master[Check the HEAD diff
 
 *Affecting all Beats*
 
-- Relax validation of the X-Pack license UID value. {issue}11640[11640]
-- Fix a parsing error with the X-Pack license check on 32-bit system. {issue}11650[11650]
-- Fix ILM policy always being overwritten. {pull}11671[11671]
-- Fix template always being overwritten. {pull}11671[11671]
-
 *Auditbeat*
 
-- Package dataset: Nullify Librpm's rpmsqEnable. {pull}11628[11628]
-
 *Filebeat*
-
-- Fix `add_docker_metadata` source matching, using `log.file.path` field now. {pull}11577[11577]
 
 *Heartbeat*
 
