--- a/libbeat/docs/release-notes/7.0.0.asciidoc
+++ b/libbeat/docs/release-notes/7.0.0.asciidoc
@@ -194,6 +194,8 @@ upgrade.
 - Reconnections of Kubernetes watchers are now logged at debug level when they are harmless. {pull}10988[10988]
 - Add `missing host.*` fields to fields.yml. {pull}11016[11016]
 - Fixed OS family classification in `add_host_metadata` for Amazon Linux, Raspbian, and RedHat Linux. {issue}9134[9134] {pull}11494[11494]
+- Relax validation of the X-Pack license UID value. {issue}11640[11640]
+- Fix a parsing error with the X-Pack license check on 32-bit system. {issue}11650[11650]
 
 *Filebeat*
 
