--- a/libbeat/docs/version.asciidoc
+++ b/libbeat/docs/version.asciidoc
@@ -1,9 +1,9 @@
-:stack-version: 7.0.0-rc2
+:stack-version: 7.0.0
 :doc-branch: 7.0
 :go-version: 1.11.5
-:release-state: prerelease
+:release-state: release
 :python: 2.7.9
 :docker: 1.12
 :docker-compose: 1.11
 :branch: 7.0
-:major-version: 7.x
+:major-version: 7.0
