--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -34,4 +34,4 @@ The list below covers the major changes between 7.0.0-rc2 and master only.
 - Added support for using PYTHON_EXE to control what Python interpreter is used
   by `make` and `mage`. Example: `export PYTHON_EXE=python2.7`. {pull}11212[11212]
 - Prometheus helper for metricbeat contains now `Namespace` field for `prometheus.MetricsMappings` {pull}11424[11424]
-- ReporterV2 implements context.Context
+- New method `Context()` in ReporterV2 to obtain the context of the report. {pull}11451[11451]
