[metricbeat] check for a valid limit before we process a memory event (#11676)
* check for a valid limit before we process a memory event

(cherry picked from commit 97aec9b958e1148f6f4b9171e7a300825c78d253)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -54,6 +54,9 @@ https://github.com/elastic/beats/compare/v6.7.0...6.x[Check the HEAD diff]
 
 *Metricbeat*
 
+- Add _bucket to histogram metrics in Prometheus Collector {pull}11578[11578]
+- Prevent the docker/memory metricset from processing invalid events before container start {pull}11676[11676]
+
 *Packetbeat*
 
 *Winlogbeat*
