Change GCE to GCP to match ECS

--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -555,7 +555,7 @@ _Digital Ocean_
 }
 -------------------------------------------------------------------------------
 
-_GCE_
+_GCP_
 
 [source,json]
 -------------------------------------------------------------------------------
@@ -565,7 +565,7 @@ _GCE_
     "instance_id": "1234556778987654321",
     "machine_type": "f1-micro",
     "project_id": "my-dev",
-    "provider": "gce"
+    "provider": "gcp"
   }
 }
 -------------------------------------------------------------------------------
