--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -521,7 +521,8 @@ makes it possible to enable this processor for all your deployments (in the
 cloud or on-premise).
 
 The second optional configuration setting is `overwrite`. When `overwrite` is
-`true` (by default), `add_cloud_metadata` overwrites existing `cloud.*` fields.
+`true`, `add_cloud_metadata` overwrites existing `cloud.*` fields (`false` by
+default).
 
 The metadata that is added to events varies by hosting provider. Below are
 examples for each of the supported providers.
