--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -127,6 +127,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Added support for Cisco ASA fields to the netflow input. {pull}11201[11201]
 
 *Heartbeat*
+- Add non-privileged icmp on linux and darwin(mac). {pull}11610[11610] {issue}11498[11498]
 
 *Journalbeat*
 
