Fix TODO in Suricata doc
Add config example to replace TODO in Suricata module documentation.

--- a/x-pack/filebeat/module/suricata/_meta/docs.asciidoc
+++ b/x-pack/filebeat/module/suricata/_meta/docs.asciidoc
@@ -33,7 +33,15 @@ image::./images/kibana-suricata.png[]
 
 include::../include/configuring-intro.asciidoc[]
 
-TODO: provide an example configuration
+This is an example of how to overwrite the default log file path.
+
+[source,yaml]
+----
+- module: suricata
+  eve:
+    enabled: true
+    var.paths: ["/my/path/suricata.json"]
+----
 
 :fileset_ex: eve
 
