Consolidate and simplify pipelines

--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -5414,6 +5414,16 @@ ID of the request
 
 --
 
+*`envoyproxy.authority`*::
++
+--
+type: keyword
+
+Envoy proxy authority field
+
+
+--
+
 [[exported-fields-haproxy]]
 == haproxy fields
 
