--- a/docs/devguide/create-metricset.asciidoc
+++ b/docs/devguide/create-metricset.asciidoc
@@ -179,7 +179,7 @@ https://godoc.org/github.com/elastic/beats/libbeat/common#MapStr[MapStr API docs
 `Event` can be called multiple times inside of the `Fetch` method for metricsets that might expose multiple events.
 `Event` returns a bool that indicates if the metricset is already closed and no further events can be processed, 
 in which case `Fetch` should return immediately. If there is an error while processing one of many events, 
-it can be published using the `mb.ReporterV2.Error` method, as oppsed to returning an error value.
+it can be published using the `mb.ReporterV2.Error` method, as opposed to returning an error value.
 
 [float]
 ===== Parsing and Normalizing Fields
