Cherry-pick to 7.0: Change cloud.provider from ec2 to aws and from gce to gcp in add_clou… (#11765)
* Change cloud.provider from ec2 to aws and from gce to gcp in add_cloud_metadata (#11687)
(cherry picked from commit 69f6aeb6ee6782caa5881d021ebf48bc0ecc0e30)

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -20,6 +20,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 
 *Metricbeat*
 
+- Change cloud.provider from ec2 to aws and from gce to gcp in add_cloud_metadata to align with ECS. {issue}10775[10775] {pull}11687[11687]
+
 *Packetbeat*
 
 *Winlogbeat*
