--- a/auditbeat/docs/fields.asciidoc
+++ b/auditbeat/docs/fields.asciidoc
@@ -2518,6 +2518,15 @@ alias to: agent.hostname
 
 --
 
+*`timeseries.instance`*::
++
+--
+type: keyword
+
+Time series instance id
+
+--
+
 [[exported-fields-cloud]]
 == Cloud provider metadata fields
 
