--- a/packetbeat/docs/fields.asciidoc
+++ b/packetbeat/docs/fields.asciidoc
@@ -512,6 +512,15 @@ alias to: agent.hostname
 
 --
 
+*`timeseries.instance`*::
++
+--
+type: keyword
+
+Time series instance id
+
+--
+
 [[exported-fields-cassandra]]
 == Cassandra fields
 
