add raid level to metricset

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -25575,6 +25575,16 @@ activity-state of the device.
 
 --
 
+*`system.raid.level`*::
++
+--
+type: keyword
+
+The raid level of the device
+
+
+--
+
 *`system.raid.sync_action`*::
 +
 --
